dev/test_programs/INVALID/group12/scan_parse_errors/empty_topdecl_error.go
// empty toplevel declaration

package main

func main() {
	print()
};;